# esp32B1

./: .gitattributes  .gitignore  CHANGELOG.md  PIN_MAP.md  README.md
.workbuddy/memory/: 2026-06-07.md
ble_kbd/: CMakeLists.txt  README.md
ble_kbd/components/bsp/: CMakeLists.txt
ble_kbd/components/device/: CMakeLists.txt
ble_kbd/main/: CMakeLists.txt  esp_hid_gap.c  main.c
board_docs/: ESP32S3_BOM.csv  ESP32S3_netlist.net  README.md  firmware_gpio_init_reference.md  gpio_define.h  page1.txt  page2.txt  page3.txt  pin_mapping.json  pin_mapping_firmware.json  pin_mapping_verification_checklist.md
docs/superpowers/plans/: 2026-06-13-qa-volc-implementation.md
docs/superpowers/specs/: 2026-06-13-qa-volc-design.md
esp32code/0demo/main/: hello_world_main.c
esp32code/1.1io_demo/main/: CMakeLists.txt  main.c
esp32code/1.2io_key_led/main/: CMakeLists.txt  bsp_gpio.h  main.c
esp32code/1.3io_key_led_component/main/: CMakeLists.txt  main.c
esp32code/1.4io_key_led_task/main/: main.c
esp32code/1.5task_file/main/: main.c
esp32code/2.1demo_exti/main/: CMakeLists.txt  main.c  task_exti.c
esp32code/2.2exti_key/: CMakeLists.txt
esp32code/2.2exti_key/main/: CMakeLists.txt  main.c  task_led.c
esp32code/2.3exti_key_boot/main/: main.c
esp32code/2.4exti_task_notify/main/: CMakeLists.txt  main.c  task_exti_prco.c
esp32code/3.1demo_uart/main/: CMakeLists.txt  main.c  task_led.c
esp32code/6.2rgb_game/main/: CMakeLists.txt  main.c  task_dht11.c  task_ws2812.c
esp32code/6.2rgb_game/main/include/: task_oled.h
esp32code/7.1demo_xiaozhi_camera_sdcard/main/: CMakeLists.txt  app_wifi_store.c  main.c  task_exti_prco.c  task_lcd_lvgl.c  task_led.c  task_sdcard.c  task_ws2812.c  task_xiaozhi.c  xiaozhi_activation.c
esp32code/7.1demo_xiaozhi_camera_sdcard/main/include/: app_wifi_portal.h  face_recognition_service.h  task_lcd_lvgl_camera.h  task_led.h  task_xiaozhi.h  xiaozhi_ui_status.h
esp32code/7.2.1lcd_lvgl/main/: CMakeLists.txt  main.c  task_lcd_lvgl.c
esp32code/7.2.1lcd_lvgl/main/include/: task_dht11.h  task_timer.h  task_ws2812.h
esp32code/7.2.2lcd_lvgl_xiaozhi/: partitions.csv
esp32code/7.2xiaozhi/: CMakeLists.txt
esp32code/LCD_STM32_HAL_DRIVER/: lcd.c  lcd.h  lcd_init.c  lcd_init.h  pic.h
kai-sound-tts/: .gitignore  CLAUDE.md  README.md  踩坑说明.md  部署方案.md
kai-sound-tts/php-server/: composer.json  config.php
kai-sound-tts/python-vol/: tts_bridge_config.py  tts_bridge_server.py
matter_light/: CMakeLists.txt  README.md  partitions.csv
matter_light/.claude/: settings.local.json
matter_light/components/bsp/: CMakeLists.txt  bsp_i2c.c
matter_light/components/bsp/include/: bsp_exti.h  bsp_gpio.h
matter_light/main/: CMakeLists.txt  Kconfig.projbuild  app_driver.c  app_driver.h  app_matter.cpp  app_matter.h  app_priv.h  idf_component.yml  main.c  qrcode_utils.c  qrcode_utils.h  task_lcd_lvgl.c  task_lcd_lvgl.h
multi_periph/: README.md  TOUCH_CALIBRATION.md
multi_periph/main/: Kconfig.projbuild  idf_component.yml  main.c  task_dht11.c  task_lcd_lvgl.c  task_uart.c  task_ws2812.c
my_s3_project/main/: hello_world_main.c
qa_volc/: CLAUDE.md  CMakeLists.txt  STABILITY_FIX_PLAN.md  STABILIZE_FIX_PLAN.md  partitions.csv  sdkconfig.defaults
qa_volc/main/: CMakeLists.txt  app_wifi.c  config_parser.c  config_parser.h  idf_component.yml  lv_conf.h  main.c  task_audio_capture.c  task_qa_lvgl.c  task_timer.c  task_volc_asr.c  task_volc_llm.c  task_volc_tts.c  task_ws2812.c
qa_volc/main/include/: app_wifi.h  qa_state_machine.h  task_audio_capture.h  task_qa_lvgl.h  task_timer.h  task_volc_asr.h  task_volc_llm.h  task_volc_tts.h
qa_volc/tools/: asr_result.txt  config.ini  demo_qa_loop.py  verify_api.py
reader_v1/: ARCHITECTURE_REVIEW.md  CLAUDE.md  PHASE1_PATCH.md  README.md  REVIEW_SUMMARY.md
reader_v1/main/: CMakeLists.txt  app_buttons.c  app_display.c  app_display.h  app_tts.c  board_pins.h  bsp_spi.c  bsp_spi.h  es8388.c  idf_component.yml  lcd_st7796.h  main.c  tusb_msc.c  tusb_msc.h
reader_v2/: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  lv_conf.h  partitions.csv
reader_v2/components/tinyusb/: CMakeLists.txt
reader_v2/docs/: ARCHITECTURE_REVIEW.md  ESP32-S3代码审查核心规范.md  ESP32-S3稳定运行审查规范.md  RELEASE_NOTES_v2.1.0.md  REVIEW_SUMMARY.md  test_voices.py  火山引擎TTS调用说明.md
reader_v2/main/: CMakeLists.txt  app_buttons.c  app_cloud_tts.c  app_cloud_tts.c.bak  app_cloud_tts.h  app_config.c  app_config.h  app_display.c  app_display.h  app_oom.c  app_oom.h  app_tts.c  app_tts.h  app_wifi.c  app_wifi.h  bsp_spi.c  i2c_bus.c  i2c_bus.h  lcd_st7796.c  lv_conf.h  main.c  sd_card.c  sd_card.h  tusb_msc.c  tusb_msc.h  xl9555.c  xl9555.h
tts_mqtt/: .gitignore  CMakeLists.txt  PLAN.md  README.md  partitions.csv
tts_mqtt/main/: CMakeLists.txt  audio_player.c  audio_player.h  board_pins.h  cmd_handler.c  cmd_handler.h  es8388.c  es8388.h  http_stream.c  http_stream.h  i2c_bus.c  i2c_bus.h  idf_component.yml  main.c  wifi_mqtt.c  wifi_mqtt.h  xl9555.c  xl9555.h
tts_mqtt/server/: 工作原理.md
tts_reader/: CLAUDE.md  CMakeLists.txt  README.md  build.sh  partitions.csv
tts_reader/main/: CMakeLists.txt  app_buttons.c  app_buttons.h  app_display.c  app_display.h  app_tts.c  app_tts.h  es8388.h  lcd_st7796.c  lv_conf.h  main.c  sd_card.c  sd_card.h  xl9555.c
usb_msc_lcd/: CMakeLists.txt  README.md
usb_msc_lcd/main/: CMakeLists.txt  board_pins.h  font_8x16.h  lcd_st7796.c  lcd_st7796.h  main.c  sd_card.c  sd_card.h  tusb_msc.c  tusb_msc.h
usb_msc_lcd/tools/: fetch_tinyusb.py  gen_font.py
voicetest/: .gitignore  README.md  app.py  audio_utils.py  config_example.py  config_副本.ini  requirements.txt  火山引擎TTS调用说明.md
voicetest/static/: app.js  index.html  style.css
voicetest/tts_engines/: base.py  iflytek.py  volcano.py
xiaozhi/main/: Kconfig.projbuild  app_wifi_portal.c  face_recognition_service.cpp  idf_component.yml  task_lcd_lvgl_camera.c  xiaozhi_ui_status.c
xl9555_demo/: CMakeLists.txt  README.md
xl9555_demo/main/: CMakeLists.txt  main.c  task_key_led.c  xl9555_io.c
数据手册/: CHANGELOG.md
(+237 files in other folders)
